Fixing borders on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ section[contenteditable="true"] ul li:focus {
   --sidebar-ring: oklch(0.705 0.015 286.067);
 }
 
-.dark {
+.dark, html[data-theme="dark"] {
   --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
